# lexerlab1

Project1_Starter_Code/: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  IdAutomaton.cpp  IdAutomaton.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  Lexer.cpp  MultiplyAutomaton.cpp  MultiplyAutomaton.h  PeriodAutomaton.cpp  PeriodAutomaton.h  QMarkAutomaton.cpp  QMarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  RightParenAutomaton.cpp  RightParenAutomaton.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  lab1  main.cpp  test.txt
Project1_Starter_Code/lab1.dSYM/Contents/Resources/DWARF/: lab1
